--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-lazy-load": "^4.0.1",
+    "react-multi-carousel": "^2.8.2",
+    "react-router": "^6.4.4",
     "react-router-dom": "^6.4.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
